# code-agent

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COVERAGE_VERIFICATION.md  Makefile  PLAN.md  README.md  pr_body.md  pyproject.toml  setup.py  sonar-project.properties  test-polling.txt  uv.toml
.cursor/: mcp.json
.githooks/: post-commit  pre-commit  pre-push
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  template_pr_description.md
.github/workflows/: nightly.yml  pr-workflow.yml  publish.yml  test-coverage.yml  test-e2e.yml
cli_agent/: main.py
cli_agent/commands/: ollama.py
cli_agent/providers/: ollama.py
code_agent/: __init__.py  llm.py  version.py
code_agent/adapters/: __init__.py  adk_adapter.py  deploy_adapter.py  eval_adapter.py  web_adapter.py
code_agent/adk/: __init__.py  json_memory_service.py  memory.py  models.py  models_v2.py  security.py  services.py  session_config.py  tools.py
code_agent/agent/: __init__.py  agent.py  multi_agent.py  prompt.py
code_agent/agent/software_engineer/: README.md  __init__.py  pyproject.toml  start_run.sh  start_web.sh
code_agent/agent/software_engineer/_agent/: __init__.py
code_agent/agent/software_engineer/software_engineer/: __init__.py  agent.py  prompt.py
code_agent/agent/software_engineer/software_engineer/shared_libraries/: types.py
code_agent/agent/software_engineer/software_engineer/sub_agents/code_quality/: __init__.py  prompt.py
code_agent/agent/software_engineer/software_engineer/sub_agents/code_review/: agent.py  prompt.py
code_agent/agent/software_engineer/software_engineer/sub_agents/debugging/: agent.py  prompt.py
code_agent/agent/software_engineer/software_engineer/sub_agents/design_pattern/: agent.py  prompt.py
code_agent/agent/software_engineer/software_engineer/sub_agents/devops/: agent.py  prompt.py
code_agent/agent/software_engineer/software_engineer/sub_agents/documentation/: agent.py  prompt.py
code_agent/agent/software_engineer/software_engineer/sub_agents/testing/: agent.py  prompt.py
code_agent/agent/software_engineer/software_engineer/tools/: __init__.py  analysis_state.py  code_analysis.py  code_search.py  filesystem.py  memory.py  project_context.py  search.py  shell_command.py  system_info.py
code_agent/agents/: llm_agent.py
code_agent/cli/: __main__.py  main.py  utils.py
code_agent/config/: __init__.py  config.py  config_template.yaml  settings_based_config.py  template.yaml  validation.py
code_agent/services/: session_service.py
code_agent/static/: style.css
code_agent/templates/: README.md  __init__.py  template_manager.py
code_agent/tests/: __init__.py
code_agent/tools/: agent_config_tools.py  error_utils.py  file_tools.py  memory_tools.py  native_tools.py  security.py  simple_tools.py  verbosity.py
code_agent/verbosity/: __init__.py  controller.py
custom_agents/e2e_test_agent_gemini/: agent.py
custom_agents/e2e_test_agent_gemma/: agent.py
custom_agents/e2e_test_agent_llama/: agent.py
custom_agents/software_engineer_gemini/: pyproject.toml
custom_agents/software_engineer_litellm_llama/: .env.example  README.md  pyproject.toml
custom_agents/software_engineer_ollama_llama/: __init__.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  COVERAGE_VERIFICATION.md  ENV_CONFIGURATION.md  GIT_HOOKS.md  GIT_WORKFLOW.md  PR_VALIDATION.md  README.md  architecture.md  development_testing.md  diagram_validation.md  env-example.md  example_ollama_direct_usage.py  feature_chat.md  feature_command_execution.md  feature_configuration.md  feature_diagram_validation.md  feature_file_operations.md  feature_models_providers.md  feature_ollama_integration.md  feature_security.md  feature_web_search.md  future_improvements.md  getting_started_architecture.md  getting_started_implementation.md  getting_started_requirements.md  git_development.md  hermetic_builds.md  implementation.md  memory.md  milestone2a_completion.md  milestone2a_verification.md  ollama_integration.md  plan_mcp_support.md  planning_adk_interface_migration.md  planning_adk_memory.md  planning_google_adk_migration.md  planning_improvements.md  planning_mcp.md  planning_priorities.md  (+14 more)
docs/migration_notes/: memory_integration.md  milestone1_notes.md  model_integration.md  multi_agent_implementation.md  session_integration.md  session_integration_notes.md  session_security.md  tool_inventory.md  tool_transformation_patterns.md
sandbox/: adk_sandbox.py  adk_test_models.py  adk_test_tools.py
scripts/: create-branch.sh  extract_version.sh  install-hooks.sh  list_coverage_configs.sh  monitor-pr.sh  run_coverage_pipeline.sh  run_coverage_pipeline_venv.sh  run_e2e.py  run_e2e_tests.sh  run_native_tools_coverage.sh  run_tests.sh  run_tests_with_coverage.sh  setup_dev_env.sh  test_file_operations.sh  verify_adk_tool_wrappers.sh
scripts/e2e/: test_advanced_features.sh  test_basic_commands.sh  test_file_operations.sh  test_ollama.sh  test_providers.sh
test-reports/: e2e-tests.xml
tests/: __init__.py  conftest.py  test_adk_init.py  test_adk_session_config.py  test_agent.py  test_agent_extended.py  test_agent_improved_coverage.py  test_agent_model_errors.py  test_agent_model_string.py  test_agent_ollama_provider.py  test_agent_web_search.py  test_agent_web_search_tool.py  test_api_key_errors.py  test_chat_improved.py  test_chat_integration.py  test_chat_llm_integration.py  test_cli.py  test_cli_main_advanced.py  test_cli_main_coverage.py  test_cli_validation.py  test_config.py  test_config_api_key.py  test_config_hierarchy.py  test_config_validation.py  test_coverage_config.py  test_error_handling.py  test_error_utils.py  test_file_tools.py  test_file_tools_additional.py  test_file_tools_fix_coverage.py  test_file_tools_pagination.py  test_llm.py  test_llm_interaction.py  test_llm_mock_interaction.py  test_max_tool_calls.py  test_native_tools.py  test_native_tools_additional.py  test_ollama_commands.py  test_ollama_integration.py  test_progress_indicators.py  (+4 more)
tests/e2e/: README.md  __init__.py  test_ollama_integration.py
tests_driver/: check_ai_studio.py
(+225 files in other folders)
